--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,9 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
-
     </dependencies>
+    <build>
+        <finalName>devops-integration</finalName>
+    </build>
 
 </project>
